# persistguard-macos

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: tests.yml
config/: rules.example.json
docs/: verification.md
examples/: create_demo_fixture.py
persistguard/: __init__.py  auditlog.py  baseline.py  cli.py  config.py  engine.py  models.py  reporters.py  scanner.py  utils.py  verifier.py
persistguard/collectors/: __init__.py  base.py  cron.py  launchd.py  shell.py  system.py
persistguard/templates/: report.html
tests/: test_auditlog.py  test_baseline.py  test_collectors.py  test_engine.py  test_models.py  test_reporters.py  test_scanner.py  test_system_collector.py  test_verifier.py
tests/fixtures/demo_root/tmp/: benign.sh
