[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "persistguard-macos"
version = "1.0.0"
description = "Read-only macOS auto-start persistence detection and explainable risk scoring"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "PersistGuard Contributors"}]
keywords = ["macos", "security", "persistence", "launchd", "defensive-security"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: MacOS X",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Security",
]
dependencies = []

[project.scripts]
persistguard = "persistguard.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["persistguard*"]

[tool.setuptools.package-data]
persistguard = ["templates/*.html"]
